--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -4,6 +4,7 @@
   "logout": "تسجيل الخروج",
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
+  "dashboard": "لوحة التحكم",
   "confirm_password": "تأكيد كلمة المرور",
   "welcome": "مرحبًا",
   "welcome_back": "مرحبًا بعودتك",
