--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -5,6 +5,12 @@
   "email": "البريد الإلكتروني",
   "password": "كلمة المرور",
   "dashboard": "لوحة التحكم",
+  "enterAddressManually": "أدخل العنوان يدويًا",
+  "pickDateRange": "اختيار المدة الزمنية",
+  "medicineNotes": "الملاحظات",
+  "daysPassed": "الأيام المنقضية",
+  "remaining": "المتبقي",
+  "dateRange": "مدة الدواء",
   "confirm_password": "تأكيد كلمة المرور",
   "welcome": "مرحبًا",
   "welcome_back": "مرحبًا بعودتك",
