--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -5,6 +5,12 @@
   "email": "E-mail",
   "password": "Password",
   "dashboard": "Dashboard",
+  "enterAddressManually": "Enter address manually",
+  "pickDateRange": "Select date range",
+  "medicineNotes": "Notes",
+  "daysPassed": "Days passed",
+  "remaining": "Remaining",
+  "dateRange": "Date range",
   "confirm_password": "Confirm Password",
   "welcome": "Welcome",
   "welcome_back": "Welcome back",
